--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -93,6 +93,7 @@ section{
     flex-direction: column;
     padding: 1rem;
 }
+
 .txt-cont{
     padding: 1rem;
     
@@ -114,5 +115,7 @@ section{
    align-items: center;
    justify-content: center;
 }
-
+.tituloh3{
+    text-align: center;
+}
 
